Adiciona frontend para producao

--- a/about.html
+++ b/about.html
@@ -9,12 +9,85 @@
   <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
-  <div class="container text-center mt-5">
-    <h1 class="display-4">Sobre Raymond Smullyan</h1>
-    <p class="lead">
-      Raymond Smullyan foi um matemático, lógico e escritor americano conhecido por seus enigmas lógicos e livros de quebra-cabeças. Ele combinou matemática, filosofia e humor em suas obras, inspirando gerações de entusiastas da lógica.
-    </p>
-    <a href="index.html" class="btn btn-secondary btn-lg">Voltar à Página Inicial</a>
+  <div class="container mt-5">
+    <!-- Cabeçalho -->
+    <header class="text-center mb-5">
+      <h1 class="display-4">Sobre Raymond Smullyan</h1>
+
+      <!-- Centralizar a imagem -->
+      <div class="d-flex justify-content-center">
+        <div class="text-center" style="max-width: 300px;">
+          <img src="assets/images/raymond-smullyan.jpg" alt="Raymond Smullyan" class="img-fluid rounded shadow mx-auto d-block" style="max-height: 200px;">
+          <p class="mt-2">Foto de Raymond Smullyan</p>
+        </div>
+      </div>
+
+      <p class="lead">
+        Matemático, lógico e escritor que transformou a lógica em arte.
+      </p>
+    </header>
+
+
+    <!-- Seção: Biografia -->
+    <section class="mb-5">
+      <h2 class="text-primary">Biografia</h2>
+      <p>
+        Raymond Merrill Smullyan (1919–2017) foi um matemático, lógico, filósofo e escritor americano amplamente reconhecido por suas contribuições à lógica matemática e à teoria dos jogos. Ele nasceu em Nova York e desenvolveu desde cedo um fascínio por quebra-cabeças, enigmas e paradoxos.
+      </p>
+      <p>
+        Smullyan era conhecido por sua habilidade única de tornar conceitos complexos acessíveis ao público geral. Ele combinava humor, narrativas cativantes e raciocínio lógico em suas obras, criando uma experiência educativa e divertida para seus leitores.
+      </p>
+    </section>
+
+    <!-- Seção: Contribuições -->
+    <section class="mb-5">
+      <h2 class="text-primary">Contribuições</h2>
+      <p>
+        Smullyan é especialmente famoso por seus trabalhos em lógica formal e teoria dos jogos. Suas contribuições incluem:
+      </p>
+      <ul>
+        <li>Desenvolvimento de problemas lógicos envolvendo "cavaleiros e bandidos", onde os cavaleiros sempre dizem a verdade e os bandidos sempre mentem.</li>
+        <li>Criação de enigmas baseados em paradoxos, como o famoso "O Enigma do Barbeiro".</li>
+        <li>Livros inovadores como <em>O Que É o Nome Disso?</em>, <em>Como se Chama Este Livro?</em> e <em>Alice no País dos Enigmas</em>.</li>
+        <li>Exploração de temas profundos, como a indecidibilidade de Gödel e o Teorema da Incompletude, de forma acessível.</li>
+      </ul>
+    </section>
+
+    <!-- Seção: Legado -->
+    <section class="mb-5">
+      <h2 class="text-primary">Legado</h2>
+      <p>
+        O legado de Smullyan transcende as fronteiras da matemática e da lógica. Ele inspirou gerações de entusiastas da lógica, professores e estudantes com seus enigmas desafiadores e narrativas envolventes. Seus livros continuam sendo referências essenciais para quem deseja explorar o mundo da lógica e do pensamento crítico.
+      </p>
+      <p>
+        Além disso, Smullyan foi um mago das palavras, capaz de transformar ideias abstratas em histórias cativantes. Sua obra é uma prova de que a lógica pode ser tanto divertida quanto profunda.
+      </p>
+    </section>
+
+    <!-- Seção: Fotos e Ilustrações (Espaço para Adicionar Imagens) -->
+     <!--
+    <section class="mb-5">
+      <h2 class="text-primary">Livros</h2>
+      <div class="row">
+        <div class="col-md-4 text-center">
+          <img src="assets/images/raymond-smullyan.jpg" alt="Raymond Smullyan" class="img-fluid rounded shadow" style="max-height: 200px;">
+          <p class="mt-2"><small>Foto de Raymond Smullyan</small></p>
+        </div>
+        <div class="col-md-4 text-center">
+          <img src="assets/images/livro1.jpg" alt="Livro de Smullyan" class="img-fluid rounded shadow" style="max-height: 200px;">
+          <p class="mt-2"><small>Capa do livro "Como se Chama Este Livro?"</small></p>
+        </div>
+        <div class="col-md-4 text-center">
+          <img src="assets/images/livro2.jpg" alt="Livro de Smullyan" class="img-fluid rounded shadow" style="max-height: 200px;">
+          <p class="mt-2"><small>Capa do livro "Alice no País dos Enigmas"</small></p>
+        </div>
+      </div>
+    </section> -->
+
+    <!-- Botão Voltar -->
+    <div class="text-center">
+      <a href="index.html" class="btn btn-secondary btn-lg">Voltar à Página Inicial</a>
+    </div>
   </div>
 </body>
 </html>
