--- a/upload-image_old copy.html
+++ b/upload-image_old copy.html
@@ -6,39 +6,8 @@
   <title>Upload de Imagem</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script>
-    // Configuração de URLs dinâmicas
-    const API_BASE_URL = window.location.hostname === 'localhost' 
-        ? 'http://localhost:5000' 
-        : 'https://planeta-smullyan-backend.onrender.com/'; // Substitua pela URL do backend no Render
-
-    const FRONTEND_BASE_URL = window.location.hostname === 'localhost' 
-        ? 'http://localhost:3000' 
-        : 'https://cadmarques.github.io/planeta-smullyan-frontend'; // Substitua pela URL do GitHub Pages
-  </script>
 </head>
 <body>
-<!--  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Upload de Imagem</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/backoffice.html">Voltar ao Backoffice</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav> -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/backoffice">Voltar ao Backoffice</a>
-    </div>
-  </nav>
-
   <div class="container text-center mt-5">
     <h1>Upload de Imagem</h1>
     <form id="upload-form" enctype="multipart/form-data" class="mt-4">
@@ -66,7 +35,7 @@
       const formData = new FormData(e.target);
 
       try {
-        const response = await fetch(`${API_BASE_URL}/api/images/upload`, {
+        const response = await fetch('http://localhost:5000/api/images/upload', {
           method: 'POST',
           body: formData,
         });
@@ -78,7 +47,6 @@
               Imagem enviada com sucesso!
             </div>
           `;
-          document.getElementById('upload-form').reset(); // Limpa o formulário após o upload
         } else {
           document.getElementById('message').innerHTML = `
             <div class="alert alert-danger">
