correção do endpoint do servidor no render

--- a/manage-islands.html
+++ b/manage-islands.html
@@ -23,7 +23,7 @@
     // Configuração de URLs dinâmicas
     const API_BASE_URL = window.location.hostname === 'localhost' 
         ? 'http://localhost:5000' 
-        : 'https://planeta-smullyan-backend.onrender.com/'; // Substitua pela URL do backend no Render
+        : 'https://planeta-smullyan-backend.onrender.com'; // Substitua pela URL do backend no Render
 
     const FRONTEND_BASE_URL = window.location.hostname === 'localhost' 
         ? 'http://localhost:3000' 
