utilização de ${FRONTEND_BASE_URL} na backoffice

--- a/backoffice.html
+++ b/backoffice.html
@@ -57,7 +57,7 @@
         <div class="card">
           <div class="card-body text-center">
             <img src="assets/images/islandIcon.jpg" alt="Gerenciar Ilhas" class="icon">
-            <a href="/manage-islands" class="btn btn-primary">Gerir Ilhas</a>
+            <a href="${FRONTEND_BASE_URL}/manage-islands" class="btn btn-primary">Gerir Ilhas</a>
           </div>
         </div>
       </div>
@@ -67,7 +67,7 @@
         <div class="card">
           <div class="card-body text-center">
             <img src="assets/images/puzzlesIcon.jpg" alt="Gerenciar Puzzles" class="icon">
-            <a href="/manage-puzzles" class="btn btn-primary">Gerir Puzzles</a>
+            <a href="${FRONTEND_BASE_URL}/manage-puzzles" class="btn btn-primary">Gerir Puzzles</a>
           </div>
         </div>
       </div>
@@ -77,7 +77,7 @@
         <div class="card">
           <div class="card-body text-center">
             <img src="assets/images/uploadImagesIcon.jpg" alt="Inserir Imagens" class="icon">
-            <a href="/upload-image" class="btn btn-primary">Inserir Imagens</a>
+            <a href="${FRONTEND_BASE_URL}/upload-image" class="btn btn-primary">Inserir Imagens</a>
           </div>
         </div>
       </div>
