removed slashes nos hrefs

--- a/create-island.html
+++ b/create-island.html
@@ -26,7 +26,7 @@
 <body class="bg-light">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/manage-islands.html">Voltar a Gerir Ilhas</a>
+      <a class="navbar-brand" href="manage-islands.html">Voltar a Gerir Ilhas</a>
     </div>
   </nav>
 
@@ -162,7 +162,7 @@
         description,
         banner: selectedImageId,
       }).toString();
-      window.location.href = `/map-helper?${queryString}`;
+      window.location.href = `map-helper?${queryString}`;
     });
   </script>
 </body>
