--- a/edit-puzzle.html
+++ b/edit-puzzle.html
@@ -27,7 +27,7 @@
 <body class="bg-light">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/manage-puzzles">Voltar a Gerir Puzzles</a>
+      <a class="navbar-brand" href="manage-puzzles">Voltar a Gerir Puzzles</a>
     </div>
   </nav>
 
@@ -406,7 +406,7 @@
         }
 
         alert('Puzzle atualizado com sucesso!');
-        window.location.href = '/manage-puzzles.html';
+        window.location.href = 'manage-puzzles.html';
       } catch (error) {
         console.error('Erro ao atualizar puzzle:', error);
         alert(`Ocorreu um erro ao atualizar o puzzle: ${error.message}`);
@@ -420,7 +420,7 @@
       loadPuzzle(puzzleId);
     } else {
       alert('ID do puzzle não encontrado.');
-      window.location.href = '/manage-puzzles.html';
+      window.location.href = 'manage-puzzles.html';
     }
   </script>
 </body>
