--- a/manage-islands.html
+++ b/manage-islands.html
@@ -33,7 +33,7 @@
 <body class="bg-light">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/backoffice">Voltar ao Backoffice</a>
+      <a class="navbar-brand" href="backoffice">Voltar ao Backoffice</a>
     </div>
   </nav>
 
@@ -42,7 +42,7 @@
 
     <!-- Botões de Ação -->
     <div class="d-flex justify-content-between mb-4">
-      <a href="/create-island" class="btn btn-success">Inserir Ilha</a>
+      <a href="create-island" class="btn btn-success">Inserir Ilha</a>
       <button class="btn btn-danger btn-disabled" disabled>Remover Ilha</button>
     </div>
 
@@ -77,7 +77,7 @@
               <h5 class="card-title">${island.name}</h5>
               <p class="card-text">${island.description}</p>
               <div class="d-flex justify-content-between">
-                <a href="/edit-island.html?id=${island._id}" class="btn btn-warning btn-disabled">Editar</a>
+                <a href="edit-island.html?id=${island._id}" class="btn btn-warning btn-disabled">Editar</a>
               </div>
             </div>
           `;
