--- a/manage-puzzles.html
+++ b/manage-puzzles.html
@@ -33,7 +33,7 @@
 <body class="bg-light">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/backoffice.html">Voltar ao Backoffice</a>
+      <a class="navbar-brand" href="backoffice.html">Voltar ao Backoffice</a>
     </div>
   </nav>
 
@@ -110,7 +110,7 @@
                 <h5 class="card-title">${puzzle.title || 'Título Indisponível'}</h5> <!-- Usando "title" -->
                 <p class="card-text">${puzzle.description || 'Sem descrição'}</p>
                 <div class="d-flex justify-content-between">
-                    <a href="/edit-puzzle?id=${puzzle._id}" class="btn btn-warning">Editar</a>
+                    <a href="edit-puzzle?id=${puzzle._id}" class="btn btn-warning">Editar</a>
                     <div>
                         <input type="checkbox" class="puzzle-checkbox" data-puzzle-id="${puzzle._id}">
                         <label>Selecionar</label>
@@ -232,7 +232,7 @@
         alert('Por favor, selecione uma ilha.');
         return;
       }
-      window.location.href = `/create-puzzle?island=${selectedIslandId}`;
+      window.location.href = `create-puzzle?island=${selectedIslandId}`;
     });
 
     // Carrega as ilhas ao iniciar a página
