--- a/upload-image.html
+++ b/upload-image.html
@@ -35,7 +35,7 @@
   </nav> -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/backoffice">Voltar ao Backoffice</a>
+      <a class="navbar-brand" href="backoffice">Voltar ao Backoffice</a>
     </div>
   </nav>
 
