--- a/create-puzzle.html
+++ b/create-puzzle.html
@@ -83,7 +83,7 @@
 
     // Função para abrir a pop-up de seleção de imagem
     function openImageSelector(fieldId) {
-      const popup = window.open('/image-selector.html', 'ImageSelector', 'width=800,height=600');
+      const popup = window.open('image-selector.html', 'ImageSelector', 'width=800,height=600');
       
       // Escuta mensagens da pop-up
       window.addEventListener('message', (event) => {
