--- a/backoffice.html
+++ b/backoffice.html
@@ -42,7 +42,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Sair</a>
+            <a class="nav-link" href="index">Sair</a>
           </li>
         </ul>
       </div>
